SM-41 recipes can be saved to and deleted from a cookbook and new cookbooks can be made in my kitchen

--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -65,4 +65,12 @@ h3 {
     grid-template-columns: minmax(25%, 75%) auto;
 }
 
+.button-width {
+    width: 100%;
+}
+
+.listWithoutStyle{
+    list-style-type: none;
+}
+
 
