--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -29,6 +29,16 @@
         </div>
     </div>
 
+    <div th:fragment="cookbookForm">
+        <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control form-control-width" th:field="*{cookbookName}" required>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary" name="save">Save</button>
+        </div>
+    </div>
+
 
 
 </div>
