--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
 <head th:replace="fragments/general :: baseHeader(~{:: title})">
-    <title th:text="${socialMealsUserDTO.username} + '\'s cookbook'"></title>
+    <title></title>
 </head>
 <body>
 
@@ -10,15 +10,23 @@
     <div th:replace="fragments/general :: headerPhoto"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
-    <h1><span th:text="${socialMealsUserDTO.username} + '\'s cookbook'"></span></h1>
+
+    <h1><span th:text="${cookbookDTO.cookbookName}"></span></h1>
+
+    <h2>
+        made by
+        <a th:href="@{/cookbook/{username}(username = ${socialMealsUserDTO.username})}"
+           th:text="${socialMealsUserDTO.username}" sec:authorize="isAuthenticated()"></a>
+        <span th:text="${socialMealsUserDTO.username}" sec:authorize="isAnonymous()"></span>
+        <br>
+    </h2>
 
     <table class="table">
 
         <tr th:each="recipe : ${recipeDTOList}">
             <td><a th:href="@{/recipes/{recipeName}(recipeName=${recipe.recipeName})}" th:text="${recipe.recipeName}"></a></td>
-            <td><a th:href="@{/recipe/update/{recipeName}(recipeName=${recipe.recipeName})}" th:if="${ownRecipe}">Edit</a></td>
             <td><a onclick="return confirm('Are you sure?')"
-                   th:href="@{/recipe/delete/{recipeName}(recipeName=${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
+                   th:href="@{/cookbook/remove/{urlId}/{recipeName}(urlId = ${cookbookDTO.urlId}, recipeName = ${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
         </tr>
 
     </table>
