--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -15,9 +15,47 @@
 
     <br>
 
-    <a th:href="@{/Cookbook/{username}(username=${user.username})}"
-       class="btn btn-outline-secondary btn-lg" role="button">
-    My cookbook</a>
+
+    <div class="row justify-content-between">
+        <table class="table col-8">
+            <tr>
+                <td> <a th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My cookbook</a> </td>
+                <td></td>
+                <td>Delete</td>
+            </tr>
+            <tr th:each="cookbook : ${cookbookList}">
+                <td> <a th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a></td>
+                <td>Edit</td>
+                <td>Delete</td>
+            </tr>
+        </table>
+
+        <div class="col">
+            <a th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
+        </div>
+    </div>
+
+
+
+
+
+        <!--    <div class="row justify-content-md-center">-->
+<!--        <ul class="col-md-auto listWithoutStyle">-->
+<!--            <li>-->
+<!--                -->
+<!--            </li>-->
+<!--            <li th:each="cookbook : ${cookbookList}">-->
+<!--                <a class="btn btn-outline-secondary btn-lg button-width" role="button"-->
+<!--                   th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <a class="btn btn-outline-secondary btn-lg button-width" role="button"-->
+<!--                   th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </div>-->
+
+
 
 </div>
 
