--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -12,7 +12,7 @@
 
     </div>
     <div th:replace="fragments/general :: navbar"></div>
-    <h1>Update</h1>
+    <h1>Edit</h1>
 
     <div class="row form-control-height">
 
