--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -52,7 +52,7 @@
 
                 <div class="form-group">
                     <label for="ingredientAuto">Ingredient</label>
-                    <input class="form-control form-control-width" name="ingredientName" id="ingredientAuto">
+                    <input class="form-control form-control-width" name="ingredientName" id="ingredientAuto" required pattern=".*\S+.*" title="This field is required">
                 </div>
 
                 <div class="form-group">
