--- a/src/main/resources/templates/cookbookForm.html
+++ b/src/main/resources/templates/cookbookForm.html
@@ -10,6 +10,8 @@
     <div th:replace="fragments/general :: headerPhoto"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
+    <h1>Add new cookbook</h1>
+
     <form class="has-validation" th:action="@{/cookbook/new}" method="post" th:object="${cookbookDTO}">
         <div class="row form-control-height">
             <div class="col-8">
