--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -22,10 +22,11 @@
     <table class="table">
         <tr>
             <td><a th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My cookbook</a></td>
+            <td></td>
         </tr>
         <tr th:each="cookbook : ${cookbookList}">
-            <td><a th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a>
-            </td>
+            <td><a th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a></td>
+            <td><a th:href="@{/cookbook/update/{urlId}(urlId = ${cookbook.urlId})}" th:text="edit"></a></td>
         </tr>
     </table>
 
