--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -6,6 +6,7 @@
   <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="/css/socialmeals.css" >
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+  <script src="https://kit.fontawesome.com/79dcf535d0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -48,6 +49,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="/js/scripts.js"></script>
+
 </div>
 </body>
 </html>
