--- a/src/main/resources/templates/cookbookUpdateForm.html
+++ b/src/main/resources/templates/cookbookUpdateForm.html
@@ -16,7 +16,7 @@
     <div class="row form-control-height">
       <div class="col-8">
         <div class="form-group">
-          <input type="hidden" class="form-control form-control-width" th:field="*{urlId}">
+          <input type="hidden" th:field="*{urlId}">
         </div>
         <div th:replace="fragments/forms :: cookbookForm"></div>
       </div>
