--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -72,6 +72,10 @@ h3 {
     list-style-type: none;
 }
 
+.updateShoppingList{
+    margin-left: -6%;
+}
+
 .row-no-margin{
     margin-left: 0px;
 }
