--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -64,9 +64,26 @@
 
         <div class="col">
             <h3>Shoppinglist</h3>
-            <ul>
+
+            <ul class="listWithoutStyle updateShoppingList">
                 <li th:each="ingredientRecipe : ${presentIngredientsRecipes}">
-                    <a th:text="${ingredientRecipe.ingredientDTO.ingredientName} + ' ' + ${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></a>
+
+
+                    <div class="row">
+
+                        <div class="col-1">
+                            <a onclick="return confirm('Are you sure?')"
+                               th:href="@{/recipe/delete/{recipeName}/{ingredientName}
+                           (recipeName=${ingredientRecipe.recipeDTO.recipeName},
+                           ingredientName=${ingredientRecipe.ingredientDTO.ingredientName})}"><i class="fas fa-minus"></i></a>
+                        </div>
+
+                        <div class="col-9">
+                            <span th:text="${ingredientRecipe.ingredientDTO.ingredientName} + ' ' + ${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></span>
+                        </div>
+
+                    </div>
+
                 </li>
             </ul>
         </div>
