--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -40,20 +40,24 @@
             <form class="has-validation"
                   th:action="@{/recipe/update/{recipeName}/addingredient(recipeName=${recipeDTO.recipeName})}" method="post"
                   th:object="${ingredientRecipeDTO}">
-                <div class="form-group">
-                    <label for="quantity">Quantity</label>
-                    <input class="form-control form-control-width" type="number" min="0.1" step="0.1" id="quantity" th:field="*{quantity}">
-                </div>
-
-                <div class="form-group">
-                    <label for="quantitytype">Quantity type</label>
-                    <input class="form-control form-control-width" type="text" id="quantitytype" th:field="*{quantityType}">
-                </div>
 
                 <div class="form-group">
                     <label for="ingredientAuto">Ingredient</label>
                     <input class="form-control form-control-width" name="ingredientName" id="ingredientAuto" required pattern=".*\S+.*" title="This field is required">
                 </div>
+
+                <div class="row">
+                    <div class="form-group col-4">
+                        <label for="quantity">Quantity</label>
+                        <input class="form-control form-control-width" type="number" min="0.1" step="0.1" id="quantity" th:field="*{quantity}">
+                    </div>
+
+                    <div class="form-group col-7">
+                        <label for="quantitytype">Unit</label>
+                        <input class="form-control form-control-width" type="text" id="quantitytype" th:field="*{quantityType}">
+                    </div>
+                </div>
+
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Save</button>
