SM-72 layout update

--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -14,23 +14,34 @@
 
     <br>
 
-    <div class="d-flex flex-row-reverse">
-        <a th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
+    <div class="row justify-content-md-center">
+        <div class="col-8">
+            <div class="d-flex flex-row-reverse">
+                <a th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
+            </div>
+
+            <table>
+                <tr class="row-even-spacing">
+                    <td class="align-middle">
+                        <a th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My Recipes</a>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr class="row-even-spacing" th:each="cookbook : ${cookbookList}">
+                    <td class="align-middle">
+                        <a th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a>
+                    </td>
+                    <td data-th-align="right">
+                        <a type="button" class="btn btn-primary" th:href="@{/cookbook/update/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-pencil-alt"></i></a>
+                        <a type="button" class="btn btn-primary" th:href="@{/cookbook/delete/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-trash"></i></a>
+                    </td>
+                </tr>
+            </table>
+        </div>
+
     </div>
 
-    <table class="table">
-        <tr>
-            <td><a th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My cookbook</a></td>
-            <td></td>
-        </tr>
-        <tr th:each="cookbook : ${cookbookList}">
-            <td><a th:href="@{/cookbook/{urlId}(urlId = ${cookbook.urlId})}" th:text="${cookbook.cookbookName}"></a></td>
-            <td data-th-align="right">
-                <a type="button" class="btn btn-primary" th:href="@{/cookbook/update/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-pencil-alt"></i></a>
-                <a type="button" class="btn btn-primary" th:href="@{/cookbook/delete/{urlId}(urlId = ${cookbook.urlId})}"><i class="fas fa-trash"></i></a>
-            </td>
-        </tr>
-    </table>
+
 
 </div>
 
