--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -25,8 +25,7 @@
 
         <tr th:each="recipe : ${recipeDTOList}">
             <td><a th:href="@{/recipes/{recipeName}(recipeName=${recipe.recipeName})}" th:text="${recipe.recipeName}"></a></td>
-            <td><a onclick="return confirm('Are you sure?')"
-                   th:href="@{/cookbook/remove/{urlId}/{recipeName}(urlId = ${cookbookDTO.urlId}, recipeName = ${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
+            <td><a class="confirmDelete" th:href="@{/cookbook/remove/{urlId}/{recipeName}(urlId = ${cookbookDTO.urlId}, recipeName = ${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
         </tr>
 
     </table>
