--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -20,7 +20,7 @@
                 <a th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
             </div>
 
-            <table>
+            <table class="table">
                 <tr class="row-even-spacing">
                     <td class="align-middle">
                         <a th:href="@{/cookbook/myCookbook/{username}(username=${user.username})}">My Recipes</a>
