--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col">
-            <h3>Cooking instruction</h3>
+            <h3>Cooking instructions</h3>
             <ol>
                 <li th:each="step : ${recipeDTO.steps}">
                     <a th:text="${step}"></a>
@@ -67,31 +67,46 @@
 
 
         <div class="col">
-            <h3>Shoppinglist</h3>
+            <h3>Shopping list</h3>
 
-            <ul class="listWithoutStyle updateShoppingList">
+            <ul class="listWithoutStyle">
                 <li th:each="ingredientRecipe : ${presentIngredientsRecipes}">
 
 
-                    <div class="row">
+                    <div class="row updateShoppingList">
+
+                        <div class="col-4">
+                            <span th:text="${ingredientRecipe.ingredientDTO.ingredientName}"></span>
+                        </div>
+
+                        <div class="col-6">
+                            <span th:text="${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></span>
+                        </div>
 
                         <div class="col-1">
-                            <a onclick="return confirm('Are you sure?')"
+                            <a onclick="return confirm('Are you sure?')" class="btn btn-primary"
                                th:href="@{/recipe/delete/{recipeName}/{ingredientName}
                            (recipeName=${ingredientRecipe.recipeDTO.recipeName},
-                           ingredientName=${ingredientRecipe.ingredientDTO.ingredientName})}"><i class="fas fa-minus"></i></a>
+                           ingredientName=${ingredientRecipe.ingredientDTO.ingredientName})}"><i class="fas fa-trash "></i></a>
                         </div>
 
-                        <div class="col-9">
-                            <span th:text="${ingredientRecipe.ingredientDTO.ingredientName} + ' ' + ${ingredientRecipe.getQuantityAsString() + ' ' + ingredientRecipe.quantityType}"></span>
-                        </div>
+
+
+
+
+
+
 
                     </div>
 
                 </li>
             </ul>
         </div>
+
     </div>
+
+
+
 
 
 
