SM-66 small design fix

--- a/src/main/resources/templates/cookbookDetails.html
+++ b/src/main/resources/templates/cookbookDetails.html
@@ -21,7 +21,7 @@
         <br>
     </h2>
 
-    <form class="searchRecipeInCookbook" th:action="@{/cookbook/recipe/search}">
+    <form class="searchRecipe" th:action="@{/cookbook/recipe/search}">
         <input type="text" class="form-control" name="keyword"/>
         <input type="hidden" th:value="${cookbookDTO.getUrlId()}" name="cookbookid">
         <input type="submit" class="btn btn-primary" value="Search"/>
