SM-66 a user can also search on the mycookbook page

--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -12,6 +12,11 @@
 
     <h1><span th:text="${socialMealsUserDTO.username} + '\'s cookbook'"></span></h1>
 
+    <form class="searchRecipe" th:action="@{/cookbook/recipe/search}">
+        <input type="text" class="form-control" name="keyword"/>
+        <input type="submit" class="btn btn-primary" value="Search"/>
+    </form>
+
     <table class="table">
 
         <tr th:each="recipe : ${recipeDTOList}">
