--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -16,8 +16,8 @@
 
     <div class="row justify-content-md-center list-styling">
         <div class="col-8">
-            <div class="d-flex flex-row-reverse">
-                <a th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
+            <div class="d-flex flex-row-reverse increase-font">
+                <a class="text-decoration-none" th:href="@{/MyKitchen/addCookbook}">Create Cookbook</a>
             </div>
 
             <table class="table">
