--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -40,7 +40,7 @@
 
         <div class="col-6">
             <h3>Cooking instructions</h3>
-            <ol class="long-text">
+            <ol>
                 <li th:each="step, iterStep : ${recipe.steps}">
                     <a th:text="${step}"></a>
                 </li>
@@ -49,7 +49,7 @@
 
         <div class="col-3 ">
 
-            <ul class="shoppingListPostIT listWithoutStyle long-text">
+            <ul class="shoppingListPostIT listWithoutStyle">
                 <h3>Shopping list</h3>
 
                 <li th:each="ingredientRecipe : ${ingredientRecipes}">
