--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -25,7 +25,7 @@
 
         <div class="col">
             <h3>Cooking instructions</h3>
-            <ol class="long-text">
+            <ol>
                 <li th:each="step : ${recipeDTO.steps}">
                     <a th:text="${step}"></a>
                 </li>
@@ -69,7 +69,7 @@
         <div class="col">
             <h3>Shopping list</h3>
 
-            <ul class="listWithoutStyle long-text">
+            <ul class="listWithoutStyle">
                 <li th:each="ingredientRecipe : ${presentIngredientsRecipes}">
 
                     <div class="row updateShoppingList">
