--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -14,6 +14,7 @@
 
     <form class="searchRecipe" th:action="@{/cookbook/recipe/search}">
         <input type="text" class="form-control" name="keyword"/>
+        <input type="hidden" th:value="${socialMealsUserDTO.username}" name="cookbookuser">
         <input type="submit" class="btn btn-primary" value="Search"/>
     </form>
 
