--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -45,26 +45,21 @@
             <div class="row" th:if="${loggedInUser}">
                 <form class="has-validation" th:action="@{/recipes/{recipeUrlId}/rate(recipeUrlId = ${recipe.urlId})}" method="post" th:object="${rating}">
                     <div class="fork-rating d-flex justify-content-right flex-row-reverse">
-                        <input type="radio" id="fork5" name="rating" value="5">
-                        <label for="fork5" title="5 fork"><i class="fas fa-utensils"></i></label>
+                        <input class="radioRating" type="radio" id="fork5" name="rating" value="5">
+                        <label class="radioRating" for="fork5" title="5 fork"><i class="fas fa-utensils"></i></label>
 
-                        <input type="radio" id="fork4" name="rating" value="4">
-                        <label for="fork4" title="4 fork"><i class="fas fa-utensils"></i></label>
+                        <input class="radioRating" type="radio" id="fork4" name="rating" value="4">
+                        <label class="radioRating" for="fork4" title="4 fork"><i class="fas fa-utensils"></i></label>
 
-                        <input type="radio" id="fork3" name="rating" value="3">
-                        <label for="fork3" title="3 fork"><i class="fas fa-utensils"></i></label>
+                        <input class="radioRating" type="radio" id="fork3" name="rating" value="3">
+                        <label class="radioRating" for="fork3" title="3 fork"><i class="fas fa-utensils"></i></label>
 
-                        <input type="radio" id="fork2" name="rating" value="2">
-                        <label for="fork2" title="2 fork"><i class="fas fa-utensils"></i></label>
+                        <input class="radioRating" type="radio" id="fork2" name="rating" value="2">
+                        <label class="radioRating" for="fork2" title="2 fork"><i class="fas fa-utensils"></i></label>
 
-                        <input type="radio" id="fork1" name="rating" value="1">
-                        <label for="fork1" title="1 fork"><i class="fas fa-utensils"></i></label>
-
+                        <input class="radioRating" type="radio" id="fork1" name="rating" value="1">
+                        <label class="radioRating" for="fork1" title="1 fork"><i class="fas fa-utensils"></i></label>
                     </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary" name="save">Save</button>
-                    </div>
-
                 </form>
             </div>
         </div>
